# verdigris

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  ChangeLog  LICENSE.LGPLv3  README  README.md  metaobjectbuilder.cc  nickelspace.cc  nickelspace.h  verdigris.pro  verdigris.qbs
.github/workflows/: clang.yml  gcc.yml  windows.yml
benchmark/compile/: compile.cpp
benchmark/qobject/: main.cpp  object.h  qobject.pro
benchmark/startup/: main.cpp
benchmarks/: CMakeLists.txt  benchmarks.pro  benchmarks.qbs
benchmarks/KitchenSink/: README  kitchensink-verdigris.patch
benchmarks/qobject/: CMakeLists.txt  main.cpp  object.cpp  object.h  qobject.pro  qobject.qbs
benchmarks/startup/: main.cpp
qbs/modules/wqmlelement/metatypes/: metatypes.qbs
qbs/modules/wqmlelement/objlibrary/: objlibrary.qbs
src/: CMakeLists.txt  nickelspace.h  verdigris.pri  wobjectcpp.h  wobjectdefs.h  wobjectimpl.h  wproperty.h  wqmlelement.h
tests/: CMakeLists.txt  tests.pro  tests.qbs
tests/basic/: CMakeLists.txt  anothertu.cpp  anothertu.h  basic.pro  basic.qbs  tst_basic.cpp
tests/cppapi/: CMakeLists.txt  cppapi.pro  cppapi.qbs  tst_cppapi.cpp
tests/inherit/: CMakeLists.txt  api1.h  api2.h  inherit.pro  inherit.qbs  object.cpp  object.h  tst_inherit.cpp
tests/internal/: CMakeLists.txt  internal.pro  internal.qbs  tst_internal.cpp
tests/manyproperties/: CMakeLists.txt  manyproperties.pro  manyproperties.qbs  tst_manyproperties.cpp
tests/qt/: CMakeLists.txt  README  qt.pro  qt.qbs
tests/qt/qmetaenum/: CMakeLists.txt  qmetaenum.pro  qmetaenum.qbs  tst_qmetaenum.cpp
tests/qt/qmetamethod/: CMakeLists.txt  qmetamethod.pro  qmetamethod.qbs  tst_qmetamethod.cpp  tst_qmetamethod6.cpp
tests/qt/qmetaobject/: CMakeLists.txt  qmetaobject.pro  qmetaobject.qbs  tst_qmetaobject.cpp  tst_qmetaobject6.cpp
tests/qt/qmetaproperty/: CMakeLists.txt  qmetaproperty.pro  qmetaproperty.qbs  tst_qmetaproperty.cpp  tst_qmetaproperty5.cpp  tst_qmetaproperty6.cpp
tests/qt/qobject/: CMakeLists.txt  qobject.qbs  test.pro  tst_qobject.cpp  tst_qobject5.cpp  tst_qobject6.cpp
tests/qt/qobject/signalbug/: CMakeLists.txt  signalbug.cpp  signalbug.h  signalbug.pro  signalbug.qbs
tests/qt/qobject/test/: test.pro
tests/qt/qproperty/: CMakeLists.txt  qproperty.pro  qproperty.qbs  tst_qproperty6.cpp
tests/templates/: CMakeLists.txt  templates.pro  templates.qbs  tst_templates.cpp
tests/tuple/: tuple.cpp
tools/: .clang-format  CMakeLists.txt  tools.qbs
tools/metatypes_extractor/: BufferSpan.h  CMakeLists.txt  ElfSection.h  NtSection.h  main.cpp  metatypes_extractor.qbs
tools/metatypes_json/: BufferSpan.h  CMakeLists.txt  metatypes_json.cpp  metatypes_json.qbs
tutorial/: CMakeLists.txt  cpp_tutorial.cpp  cpp_tutorial.qml  cpp_tutorial.qrc  signal.cpp  tutorial.cpp  tutorial.pro  tutorial.qbs
tutorial/cpp_api/: CMakeLists.txt  cpp_api.qbs  main.cpp  main.qml
tutorial/features/: CMakeLists.txt  features.pro  features.qbs  main.cpp
tutorial/qml_element/: CMakeLists.txt  MyObject.cpp  MyObject.h  main.cpp  main.qml  qml_element.qbs
